test/should-fail/vsgc3468b/pak1/A.f3
/**
 * @subtest
 */
package vsgc3468b.pak1;

import vsgc3468b.pak2.B;

public class A extends B.B2 {}

public class A2 extends B {}
